Remove events listings
Stripping down the UI, events are still in the database.
